# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Sep 26 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Compiled and released new jar files: monetdb-jdbc-2.29.jre7.jar,
  monetdb-mcl-1.18.jre7.jar and jdbcclient.jre7.jar
- Following issues are resolved with this new MonetDB JDBC driver release:
  - JDBC: Support for Connection.prepareCall()
    See https://www.monetdb.org/bugzilla/show_bug.cgi?id=6402
    We implemented the java.sql.CallableStatement interface.
  - Jdbc connection hangs
    See https://www.monetdb.org/bugzilla/show_bug.cgi?id=6571
  - Mix of long and short queries make JDBC-driver hang
    See https://www.monetdb.org/bugzilla/show_bug.cgi?id=6693
  - Example SQLcopyinto.java does not work
    See https://www.monetdb.org/bugzilla/show_bug.cgi?id=6646
  Also improvements are made in:
  - reducing the number of objects created (and thereby heap memory size)
  - reducing number of methods called
  - robustness, more checks on invalid parameter values
  - performance

* Wed Sep 25 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- The jar files are now named according to Java version compatibility.
  For example, the monetdb-jdbc-2.29.jre7.jar file should be used with
  Java 7 or higher.

* Wed Sep 18 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected method DatabaseMetaData.getBestRowIdentifier(). It used to
  return columns of both primary key and unique constraints. Now it only
  returns the columns of the primary key if it has one, else columns of
  a unique constraint.

* Wed Sep 11 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Optimized parse() method of TupleLineParser by creating less helper objects
  and replacing method calls by direct operations on variables.

* Wed Sep  4 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected JdbcClient program: the dumping of a view DDL was incorrect when