@@ -61,8 +61,8 @@
 	    <include>${jdbc.sources}</include>
 	    <include>${mcl.sources}</include>
 	  </includes>
-	  <source>1.7</source>
-	  <target>1.7</target>
+	  <source>8</source>
+	  <target>8</target>
 	</configuration>
       </plugin>
       <plugin>
