@@ -26,9 +26,10 @@ Copyright 1997 - July 2008 CWI, August 2008 - 2020 MonetDB B.V.
   <property name="builddir"  value="build" />
   <property name="jardir"    value="../jars" />
 
-  <property name="jvm.version" value="1.7" />
-  <property name="jre.version" value="jre7" />
-  <property name="javac.flags" value="-Xlint:-options" />
+  <property name="jvm.version" value="8" />
+  <property name="jre.version" value="jre8" />
+  <property name="javac.flags" value="-profile compact2" />
+  <property name="javac.flags" value="-Xlint" />
 
   <property name="jdbc_jar"
     value="${jardir}/monetdb-jdbc-${JDBC_MAJOR}.${JDBC_MINOR}.${jre.version}.jar" />
